fix: Universal ChromaticItem.roll() option to show item to chat feat: Add Spell chat card feat: Add ordinal number suffix helper fix: Spacing was wonky on chat card icons, so icons get their own column

--- a/src/style/chat/chat-shared.css
+++ b/src/style/chat/chat-shared.css
@@ -12,8 +12,12 @@
 
     &__item {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 3fr 4fr;
       margin: 0;
+
+      i {
+        text-align: center;
+      }
 
       &__detail {
         &--term {
